Add testimonial layout

--- a/index.html
+++ b/index.html
@@ -145,6 +145,29 @@
                 </div>
             </div>
         </section>
+        <!--Testimonials-->
+        <section class="page-section" id="testimonials">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase mb-5">Testimonials</h2>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/elizaveta-balalaika.jpg" alt="" />
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <p class="text-muted">
+                            <i class="fas fa-quote-left fa-2x"></i>
+                            &nbsp;&nbsp;
+                            I have been taking balalaika lessons for 2.5 years.  Two years ago I traveled to my mom’s assisted living home and played for the residents there.  This year I had been preparing another program for them, but with the Covid-19 restrictions it could not happen.  The staff at her home was able to setup a Zoom connection so I could do my presentation for mom.  The voice connection was not very good, but she could hear the music and with my mom being a life-long musician, music was a perfect way to connect from a thousand miles away.
+                        </p>
+                        <h4 class="my-3 text-right">- Diana Coleman</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
