Remove last name

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             &nbsp;&nbsp;
                             I have been taking balalaika lessons for 2.5 years.  Two years ago I traveled to my mom’s assisted living home and played for the residents there.  This year I had been preparing another program for them, but with the Covid-19 restrictions it could not happen.  The staff at her home was able to setup a Zoom connection so I could do my presentation for mom.  The voice connection was not very good, but she could hear the music and with my mom being a life-long musician, music was a perfect way to connect from a thousand miles away.
                         </p>
-                        <h4 class="my-3 text-right">- Diana Coleman</h4>
+                        <h4 class="my-3 text-right">- Dianna</h4>
                     </div>
                 </div>
             </div>
