Add Dianna's testimony

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="col-lg-4 offset-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/elizaveta-balalaika.jpg" alt="" />
-                            <h4>Elizaveta Debelak</h4>
+                            <h4>Elizaveta (Liza) Debelak</h4>
                         </div>
                     </div>
                 </div>
@@ -155,18 +155,18 @@
                 <div class="row align-items-center">
                     <div class="col-md-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/elizaveta-balalaika.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/img/testimonials/dianna.jpg" alt="Dianna playing the balalaika" />
                         </div>
                     </div>
                     <div class="col-md-8">
                         <p class="text-muted">
                             <i class="fas fa-quote-left fa-2x"></i>
                             &nbsp;&nbsp;
-                            I have been taking balalaika lessons for 2.5 years.  Two years ago I traveled to my mom’s assisted living home and played for the residents there.  This year I had been preparing another program for them, but with the Covid-19 restrictions it could not happen.  The staff at her home was able to setup a Zoom connection so I could do my presentation for mom.  The voice connection was not very good, but she could hear the music and with my mom being a life-long musician, music was a perfect way to connect from a thousand miles away.
+                            Three years ago I was looking for someone who would look at the balalaika that I got from my mom to tell me if it was playable.  I found Liza Debelak in my search for someone local.  By putting playable strings on it and tuning it, she determined that it was playable for a beginner.  I had never played a stringed instrument, so I started taking regular lessons.  Liza found appropriate tunes for me to learn and I enjoyed her instruction in several techniques, so after 8 months I ordered a balalaika from Russia.  Then for 2 years I enjoyed learning the songs Liza found for me.  She was good at guiding me in learning more techniques for playing.  I continued to practice on my own for the 6 months that started with the COVID-19 lockdown and then decided that I had progressed as far as I could on my own.  So I contacted Liza and we started using Skype for my lessons.  I have been very pleased at how well she can see and hear how I’m doing remotely and how good she is at offering suggestions for improvements.  I look forward to continuing lessons with Liza.
                         </p>
-                        <h4 class="my-3 text-right">- Dianna</h4>
                     </div>
                 </div>
+                <h4 class="my-3 text-right">- Dianna</h4>
             </div>
         </section>
         <!-- Contact-->
