--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 Upon registering, you will receive a registration guide including tips to have the best online experience.
                             </li>
                             <li class="large text-muted">
-                                Lessons cost $55 USD + tax per hour.
+                                Lessons cost $60 USD per hour.
                             </li>
                             <li class="large text-muted">
                                 You can choose weekly or bi-weekly lessons of 30, 45 or 60 mins.
