Add Steve's testimonial

--- a/index.html
+++ b/index.html
@@ -166,7 +166,23 @@
                         </p>
                     </div>
                 </div>
-                <h4 class="my-3 text-right">- Dianna</h4>
+                <h4 class="my-3 text-right">- Dianna (USA)</h4>
+                <div class="my-5 row"></div>
+                <div class="row align-items-center flex-md-row-reverse">
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/testimonials/steve.jpg" alt="Steve" />
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <p class="text-muted">
+                            <i class="fas fa-quote-left fa-2x"></i>
+                            &nbsp;&nbsp;
+                            It had long been a dream of mine to learn the balalaika but was impossible to find a teacher locally so I searched for online lessons and found Liza Debelak. I was pessimistic about learning an instrument online being a piano teacher myself but lessons with Liza have been amazing. While nearly 16,000 kilometres away, I feel like lessons have been in my own home. Liza is very patient, kind, reliable, knowledgeable, and thoughtful, and I look forward to every lesson. I’ve had lessons for two years now and have loved every lesson.
+                        </p>
+                    </div>
+                </div>
+                <h4 class="my-3 text-right text-md-left">- Steve (Australia)</h4>
             </div>
         </section>
         <!-- Contact-->
