--- a/index.html
+++ b/index.html
@@ -174,6 +174,22 @@
                     </div>
                 </div>
                 <h4 class="my-3 text-right text-md-left">- Steve (Australia)</h4>
+                <div class="row align-items-center">
+                    <!-- <div class="col-md-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/testimonials/dianna.jpg" alt="Dianna playing the balalaika" />
+                        </div>
+                    </div> -->
+                    <div class="col-md-8">
+                        <p class="text-muted">
+                            <i class="fas fa-quote-left fa-2x"></i>
+                            &nbsp;&nbsp;
+                            In the fall of 2023 I was called upon to accompany my choir, Brooklyn Youth Chorus. I, being an instrumentalist with a Balalaika and excited to play in a professional setting. There was one issue, I didn’t know how to play! I started getting lessons from Ms. Liza Debelak with a goal in mind, to learn the song I’d be playing with my choir, “The little birch tree.” The following lessons I received were incredible! Very easy to grasp instructions on how to adjust and improve my playing, she is an incredibly patient and understanding teacher with a wealth of knowledge to share with any prospective student eager to learn such a beautiful instrument. These lessons over skype were incredibly comfortable, I often get nervous video calling but after meeting Ms. Debelak I felt very at home. Every lesson has been very enlightening and helpful for my technique and understanding of an instrument I wasn’t too acquainted with previously, being a keyboardist.
+                        </p>
+                    </div>
+                </div>
+                <h4 class="my-3 text-right">- Victoria (USA)</h4>
+                <div class="my-5 row"></div>
             </div>
         </section>
         <!-- Contact-->
