--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
                 </div>
                 <h4 class="my-3 text-right text-md-left">- Steve (Australia)</h4>
                 <div class="row align-items-center">
-                    <!-- <div class="col-md-4">
+                    <div class="col-md-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/testimonials/dianna.jpg" alt="Dianna playing the balalaika" />
+                            <i class="fas fa-user fa-stack-1x fa-inverse"></i>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="col-md-8">
                         <p class="text-muted">
                             <i class="fas fa-quote-left fa-2x"></i>
