--- a/index.html
+++ b/index.html
@@ -174,10 +174,13 @@
                     </div>
                 </div>
                 <h4 class="my-3 text-right text-md-left">- Steve (Australia)</h4>
-                <div class="row align-items-center">
+                <div class="mt-5 row align-items-center">
                     <div class="col-md-4">
                         <div class="team-member">
-                            <i class="fas fa-user fa-stack-1x fa-inverse"></i>
+                            <span class="fa-stack fa-4x">
+                                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fas fa-user fa-stack-1x fa-inverse"></i>
+                            </span>
                         </div>
                     </div>
                     <div class="col-md-8">
