--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#lessons">Lessons</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#testimonials">Testimonials</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#music">Music</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -193,6 +194,23 @@
                 </div>
                 <h4 class="my-3 text-right">- Victoria (USA)</h4>
                 <div class="my-5 row"></div>
+            </div>
+        </section>
+        <!-- Music-->
+        <section class="page-section bg-light" id="music">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Recordings of my music</h2>
+                    <h3 class="section-subheading text-muted">From live performances</h3>
+                </div>
+                <div class="row">
+                    <div class="col-lg-8 mx-auto text-center">
+                        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2040071792&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/liza-debelak" title="Liza Debelak" target="_blank" style="color: #cccccc; text-decoration: none;">Liza Debelak</a> · <a href="https://soundcloud.com/liza-debelak/the-deep-volga-river" title="The Deep Volga River" target="_blank" style="color: #cccccc; text-decoration: none;">The Deep Volga River</a></div>
+                    </div>
+                    <div class="col-lg-8 mx-auto text-center">
+                        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2040074136&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/liza-debelak" title="Liza Debelak" target="_blank" style="color: #cccccc; text-decoration: none;">Liza Debelak</a> · <a href="https://soundcloud.com/liza-debelak/by-the-gates" title="By the Gates" target="_blank" style="color: #cccccc; text-decoration: none;">By the Gates</a></div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Contact-->
