--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Learn how to play the balalaika online with video or Skype lessons." />
+        <meta name="description" content="Learn how to play the balalaika online with video lessons." />
         <title>Online Balalaika Lessons</title>
         <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
@@ -86,7 +86,7 @@
                         <h4 class="my-3 text-center">Details</h4>
                         <ul>
                             <li class="large text-muted">
-                                All lessons take place on Skype, from wherever you are.
+                                All lessons take place online, from wherever you are.
                             </li>
                             <li class="large text-muted">
                                 Upon registering, you will receive a registration guide including tips to have the best online experience.
